[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "spotify_serialize"
authors = [
    {name = "Vincent Lin", email = "vinlin24@outlook.com"},
]
description = "Simple backup system for a user's Spotify library"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.8"
keywords = ["spotify", "backup"]
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "click~=8.1.3",
    "tekore~=4.5.0",
    "requests~=2.28.2",
]
dynamic = ["version"]

[project.scripts]
spotify_serialize = "spotify_serialize.main:cli"

[tool.setuptools.dynamic]
version = {attr = "spotify_serialize.__version__"}
