[tool.poetry]
name = "spotify-serialize"
version = "0.0.0"
description = "Simple backup system for a user's Spotify library"
authors = ["Vincent Lin <vinlin24@outlook.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.1.7"
tekore = "^5.0.1"
requests = "^2.31.0"

[tool.poetry.scripts]
ss = "spotify_serialize.main:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
